tests/rosetta/transpiler/Java/2048.error
compile: exit status 1
/tmp/TestJavaTranspiler_Rosetta_Golden20481860401981/001/Main.java:135: error: array required, but Object found
                if (b[y][x] != new_[x]) {
                                   ^
/tmp/TestJavaTranspiler_Rosetta_Golden20481860401981/001/Main.java:138: error: array required, but Object found
b[y][x] = new_[x];
              ^
/tmp/TestJavaTranspiler_Rosetta_Golden20481860401981/001/Main.java:196: error: array required, but Object found
                if (b[y][x] != new_[y]) {
                                   ^
/tmp/TestJavaTranspiler_Rosetta_Golden20481860401981/001/Main.java:199: error: array required, but Object found
b[y][x] = new_[y];
              ^
/tmp/TestJavaTranspiler_Rosetta_Golden20481860401981/001/Main.java:305: error: bad operand types for binary operator '&&'
                if (full && (!(Boolean)hasMoves(board))) {
                         ^
  first type:  Object
  second type: boolean
5 errors
